--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <plugin>
     <id>tag</id>
     <name>Tag</name>
-    <description>Tag plugin enables you to put "tags" in your articles to make a tag cloud. This will make it easier for you to classify articles using the tags.</description>
+    <description>Tag plugin enables you to put tags in your articles to make a tag cloud. This will make it easier for you to classify articles using the tags.</description>
     <version>1.0.0</version>
     <glfusionversion>1.2.0</glfusionversion>
     <phpversion>4.3.0</phpversion>
